--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script>
+    const tg = window.Telegram.WebApp;
+    tg.MainButton.show();
+    tg.MainButton.setText("test");
+  </script>
 </head>
+
 <body>
   <p1>123</p1>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
+
 </html>
