--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script>
-    const tg = window.Telegram.WebApp;
-    tg.MainButton.show();
-    tg.MainButton.setText("test");
-  </script>
 </head>
 
 <body>
-  <p1>123</p1>
+  <p>123</p>
+  <div class="test"></div>
+  <script>
+    const tg = window.Telegram.WebApp;
+    console.log(tg.initDataUnsafe.user.username);
+    console.log(tg.initDataUnsafe.user);
+    console.log(tg.initDataUnsage);
+    document.querySelector('.test.').textContent = tg.initDataUnsafe.user.username);
+  </script>
 </body>
 
 </html>
