--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     console.log(tg.initDataUnsafe.user);
     console.log(tg.initDataUnsage);
     document.querySelector('.id').textContent = tg.initDataUnsafe.user.id;
-    document.querySelector('.username').textContent = tg.initDataUnsafe.user.username);
+    document.querySelector('.username').textContent = tg.initDataUnsafe.user.username;
     document.querySelector('.obj').textContent = JSON.stringify(tg.initDataUnsafe);
   </script>
 </body>
