--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 let token = '';
 
-  document.querySelector('/#get_token').onclick = async () => {
+  document.querySelector('#get_token').onclick = async () => {
     const data = await (await fetch('http://localhost:3000/get_token', {
       method: 'POST',
       headers: {
